# hyw_augment

./: .gitignore  NOTES.md  README.md  hyw_augment.toml  pyproject.toml
data/: extracted-words.json  function-words.json  nayiri-armenian-lexicon-2026-02-15-v1-sample-indented.json  nayiri-armenian-lexicon-2026-02-15-v1-sample.json
src/hyw_augment/: __init__.py  __main__.py  apertium.py  cli.py  conllu.py  coverage.py  derivation.py  engine.py  extract_function_words.py  glossary.py  latin_hyw_to_hy.py  nayiri.py  orthography.py  spelling.py
tests/: conftest.py  test_basics.py  test_conllu.py  test_engine.py  test_glossary.py  test_nayiri.py  test_orthography.py
