[project]
name = "hyw_augment"
version = "0.1.0"
description = "Western Armenian morphological augmentation layer for LLMs"
requires-python = ">=3.11"
license = {text = "MPL 2.0"}
authors = [
    {name = "Iskandar"},
]

dependencies = []

[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
]
ollama = [
    "ollama",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
